--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "roblox-vscode-icon-theme",
   "displayName": "Roblox Studio Icon Theme",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "description": "Roblox Studio icon themes for Visual Studio Code",
   "license": "MIT",
   "icon": "icons/logo.png",
@@ -18,15 +18,15 @@
   "contributes": {
     "iconThemes": [
       {
-        "id": "roblox-vscode-icon-theme",
-        "label": "Roblox Studio Icon Theme",
+        "id": "streeteenk-roblox-icons",
+        "label": "Streeteenk Roblox Icons",
         "path": "./roblox-studio-icon-theme.json"
       }
     ]
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vladmarica/roblox-vscode-icon-theme.git"
+    "url": "https://github.com/streeteenk/roblox-vscode-icon-theme.git"
   },
-  "publisher": "vladmarica"
+  "publisher": "streeteenk"
 }
